support extended capability
